# visual_behavior_plotting

./: .gitignore  LICENSE  README.md  functional-specification.md  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: visual_behavior_plotting_tutorial.ipynb
examples/: visual_behavior_plotting_tutorial.html  visual_behavior_plotting_tutorial.ipynb
visual_behavior/: data_access.py  util.py
visual_behavior/plotting/: behavior_plots.py  neural_plots.py  plot_utils.py  plotting.py
visual_behavior/testing/: behavior_plots_test.py  test_behavior_plots.py  test_data_access.py  test_neural_plots.py
