[metadata]
name = visual_behavior_plotting
version = 0.1.1
author = NeurViz project group, University of Washington Masters in Data Science Program
author_email = kater@alleninstitute.org
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DowntonCrabby/visual_behavior_plotting
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = visual_behavior
packages = find:
python_requires = >=3.7

[options.packages.find]
where = visual_behavior