[metadata]
name = visual_behavior_plotting
version = 0.1.4
author = NeurViz project group, University of Washington Masters in Data Science Program
author_email = kater@alleninstitute.org
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DowntonCrabby/visual_behavior_plotting
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires =
    flake8==3.9.2
    pytest==6.2.4
    allensdk==2.13.3
    numpy==1.20.3
    matplotlib==3.4.2
    pandas==1.3.4
    seaborn==0.11.2
    path==16.0.0

# [options]
# package_dir =
#     = visual_behavior
# packages = find:
# python_requires = >=3.7

# [options.packages.find]
# where = visual_behavior